# gpui-template

./: .gitignore  Cargo.toml  Makefile  README.md  cargo-generate.toml
locales/: en.yml  zh-CN.yml
patches/smol-wasm/: Cargo.toml
patches/smol-wasm/src/: lib.rs  spawn.rs  wasm_stubs.rs
scripts/: build-wasm.sh
src/: assets.rs  i18n.rs  lib.rs  main.rs  workspace.rs
src/app/: actions.rs  app_menus.rs  app_state.rs  embedded_themes.rs  key_binding.rs  mod.rs  system_tray.rs  themes.rs  title_bar.rs
src/core/: mod.rs
src/core/updater/: checker.rs  downloader.rs  version.rs
src/panels/: bottom_panel.rs  center_panel.rs  left_panel.rs  mod.rs  right_panel.rs  settings.rs
themes/: Default Light.json
www/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
www/src/: main.js
