[package]
edition = "2024"
name = "gpui-template"
publish = false
version = "0.1.0"

[package.metadata.bundle]
category = "Developer Tool"
icon = ["assets/icon.png"]
identifier = "com.example.gpui-template"
name = "GPUI Template"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[[bin]]
name = "gpui-template"
path = "src/main.rs"

[dependencies]
gpui = {git = "https://github.com/zed-industries/zed"}
gpui_platform = {git = "https://github.com/zed-industries/zed"}
gpui-component = {git = "https://github.com/sxhxliang/gpui-component", rev = "be0f548"}
gpui-component-assets = {git = "https://github.com/sxhxliang/gpui-component", rev = "be0f548"}

anyhow = "1"
tokio = { version = "1", features = ["sync", "rt"] }
dirs = "6"
image = "0.25"
log = "0.4"
rust-i18n = "3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sys-locale = "0.3"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tray-icon = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
strip = "debuginfo"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
