[package]
edition = "2024"
name = "{{crate_name}}"
publish = false
version = "0.1.0"
authors = ["{{author-name}} <{{author-email}}>

[package.metadata.bundle]
category = "Developer Tool"
icon = ["assets/icon.png"]
identifier = "com.example.{{crate_name}}"
name = "{{project-name}}"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[features]
default = ["native-app"]
# Desktop binary (system tray, etc.). Omit for `wasm32` builds: `--no-default-features --lib`.
native-app = []

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "{{crate_name}}"
path = "src/main.rs"
required-features = ["native-app"]

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

anyhow = "1"
log = "0.4"
rust-i18n = "3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sys-locale = "0.3"
tokio = {version = "1", features = ["sync", "rt", "rt-multi-thread"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6"
image = "0.25"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
tray-icon = "0.19"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
gpui_web = {git = "https://github.com/zed-industries/zed"}
tracing-wasm = "0.2"
wasm-bindgen = "0.2"

[target.'cfg(all(target_os = "linux", not(target_family = "wasm")))'.dependencies]
gtk = "0.18"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
strip = "debuginfo"

[profile.dev.package]
gpui = {opt-level = 3}
gpui-component = {opt-level = 3}
gpui-component-assets = {opt-level = 3}
gpui_platform = {opt-level = 3}

# [patch.crates-io]
# smol = { path = "patches/smol-wasm" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
